# helm

./: Cargo.toml  README.md
crates/helm-cli/: Cargo.toml  build.rs
crates/helm-cli/src/: main.rs
crates/helm-cli/tests/: cart_pole_loop.rs  cart_pole_policy.rs  hardware_link_down.rs  hardware_plant_swap.rs  hardware_sim_delta_analysis.rs  hardware_steady_state_stale.rs  safety_faults.rs
crates/helm-core/: Cargo.toml
crates/helm-core/src/: bus.rs  error.rs  fault.rs  lib.rs  message.rs  module.rs  runtime.rs
crates/helm-dashboard/: .gitignore  Cargo.toml  README.md
crates/helm-dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/helm-dashboard/frontend/src/: App.css  App.tsx  types.ts  useDashboardSocket.ts
crates/helm-dashboard/frontend/src/components/: ForceChart.tsx  PoleView.tsx  SafetyBadge.tsx
crates/helm-dashboard/src/: lib.rs  module.rs  server.rs  snapshot.rs  static_files.rs
crates/helm-dashboard/tests/: isolation.rs
crates/helm-hardware/: Cargo.toml  README.md
crates/helm-hardware/src/: config.rs  lib.rs  plant.rs  session.rs  transport.rs
crates/helm-hardware/tests/: physics_wire.rs  plant_pty.rs  wire_roundtrip.rs
crates/helm-modules/: Cargo.toml
crates/helm-modules/src/: lib.rs  logger.rs  pid.rs  policy.rs  policy_onnx.rs  safety.rs  stabilizer.rs
crates/helm-modules/tests/: policy_onnx.rs
crates/helm-modules/tests/fixtures/: cartpole_test.onnx  cartpole_test.onnx.json
crates/helm-sim/: Cargo.toml
crates/helm-sim/src/: cart_pole.rs  cart_pole_module.rs  lib.rs
crates/helm-sim/tests/: physics_contract.rs
crates/helm-wire/: Cargo.toml
crates/helm-wire/src/: crc.rs  frame.rs  lib.rs  messages.rs
tools/: pty_rtt_measure.py  pty_rtt_measure_spawn.py
tools/train/: README.md  env.py  export_onnx.py  export_test_onnx.py  train.py
