[workspace]
resolver = "2"
members = [
    "crates/helm-core",
    "crates/helm-sim",
    "crates/helm-modules",
    "crates/helm-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
