[workspace]
resolver = "2"
members = [
    "crates/helm-core",
    "crates/helm-sim",
    "crates/helm-modules",
    "crates/helm-cli",
    "crates/helm-dashboard",
]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "ndarray", "tls-rustls"] }
ndarray = { version = "0.17", features = ["std"] }
