[package]
name = "helm-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
helm-core = { path = "../helm-core" }
helm-sim = { path = "../helm-sim" }
helm-modules = { path = "../helm-modules" }
helm-dashboard = { path = "../helm-dashboard", optional = true }
helm-hardware = { path = "../helm-hardware", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
onnx = ["helm-modules/onnx"]
dashboard = ["dep:helm-dashboard"]
hardware = ["dep:helm-hardware"]

[[test]]
name = "hardware_plant_swap"
path = "tests/hardware_plant_swap.rs"
required-features = ["hardware"]

[[test]]
name = "hardware_link_down"
path = "tests/hardware_link_down.rs"
required-features = ["hardware"]

[[test]]
name = "hardware_steady_state_stale"
path = "tests/hardware_steady_state_stale.rs"
required-features = ["hardware"]

[[test]]
name = "cart_pole_policy"
path = "tests/cart_pole_policy.rs"
required-features = ["onnx"]
