[package]
name = "helm-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
helm-core = { path = "../helm-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.24"
